// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonBar with center justify 1`] = `
<div
  className="ui-button-bar buttonBar normal"
>
  <div
    className="ui-button-bar-group buttonBarGroup center"
  />
</div>
`;

exports[`Test creation of a ButtonBar with left justify 1`] = `
<div
  className="ui-button-bar buttonBar normal"
>
  <div
    className="ui-button-bar-group buttonBarGroup left"
  />
</div>
`;

exports[`Test creation of a ButtonBar with right justify 1`] = `
<div
  className="ui-button-bar buttonBar normal"
>
  <div
    className="ui-button-bar-group buttonBarGroup right"
  />
</div>
`;

exports[`Test creation of a simple ButtonBar instance 1`] = `
<ButtonBar
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  buttonSize="32px"
  className="test-class"
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  id=""
  justify={0}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-button-bar buttonBar normal test-class"
  >
    <div
      className="ui-button-bar-group buttonBarGroup left"
    >
      <div
        className="buttonBarBox"
        style={
          Object {
            "height": "32px",
            "width": "32px",
          }
        }
      >
        <Button
          backgroundColor="inherit"
          borderColor="inherit"
          borderWidth="none"
          className=""
          color="inherit"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          iconName="bomb"
          iconStyle=""
          id=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          visible={true}
        >
          <div
            className="ui-button button ripple normal"
            onClick={[Function]}
            style={Object {}}
          >
            <Icon
              backgroundColor="inherit"
              borderColor="inherit"
              borderWidth="none"
              className=" icon"
              color="inherit"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              visible={true}
            >
              <i
                className="ui-icon icon none fa false fa-bomb normal  icon"
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "inherit",
                  }
                }
              />
            </Icon>
          </div>
        </Button>
      </div>
      <div
        className="buttonBarBox"
        style={
          Object {
            "height": "32px",
            "width": "32px",
          }
        }
      >
        <Button
          backgroundColor="inherit"
          borderColor="inherit"
          borderWidth="none"
          className=""
          color="inherit"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          iconName="bomb"
          iconStyle=""
          id=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          visible={true}
        >
          <div
            className="ui-button button ripple normal"
            onClick={[Function]}
            style={Object {}}
          >
            <Icon
              backgroundColor="inherit"
              borderColor="inherit"
              borderWidth="none"
              className=" icon"
              color="inherit"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              visible={true}
            >
              <i
                className="ui-icon icon none fa false fa-bomb normal  icon"
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "inherit",
                  }
                }
              />
            </Icon>
          </div>
        </Button>
      </div>
    </div>
  </div>
</ButtonBar>
`;

exports[`Test disabling of the ButtonBar control 1`] = `
<ButtonBar
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  buttonSize="24px"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  id=""
  justify={0}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-button-bar buttonBar normal disabled nohover"
  >
    <div
      className="ui-button-bar-group buttonBarGroup left"
    >
      <div
        className="buttonBarBox"
        style={
          Object {
            "height": "24px",
            "width": "24px",
          }
        }
      >
        <Button
          backgroundColor="inherit"
          borderColor="inherit"
          borderWidth="none"
          className=""
          color="inherit"
          contentEditable={false}
          direction="right"
          disabled={true}
          focus={false}
          iconName="bomb"
          iconStyle=""
          id=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          visible={true}
        >
          <div
            className="ui-button button normal disabled nohover"
            onClick={[Function]}
            style={Object {}}
          >
            <Icon
              backgroundColor="inherit"
              borderColor="inherit"
              borderWidth="none"
              className=" icon"
              color="inherit"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              visible={true}
            >
              <i
                className="ui-icon icon none fa false fa-bomb normal  icon"
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "inherit",
                  }
                }
              />
            </Icon>
          </div>
        </Button>
      </div>
      <div
        className="buttonBarBox"
        style={
          Object {
            "height": "24px",
            "width": "24px",
          }
        }
      >
        <Button
          backgroundColor="inherit"
          borderColor="inherit"
          borderWidth="none"
          className=""
          color="inherit"
          contentEditable={false}
          direction="right"
          disabled={true}
          focus={false}
          iconName="bomb"
          iconStyle=""
          id=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          visible={true}
        >
          <div
            className="ui-button button normal disabled nohover"
            onClick={[Function]}
            style={Object {}}
          >
            <Icon
              backgroundColor="inherit"
              borderColor="inherit"
              borderWidth="none"
              className=" icon"
              color="inherit"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              visible={true}
            >
              <i
                className="ui-icon icon none fa false fa-bomb normal  icon"
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "inherit",
                  }
                }
              />
            </Icon>
          </div>
        </Button>
      </div>
    </div>
  </div>
</ButtonBar>
`;

exports[`Test making the ButtonBar invisible 1`] = `
<ButtonBar
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  buttonSize="24px"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  id=""
  justify={0}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  visible={false}
>
  <div
    className="ui-button-bar buttonBar normal invisible"
  >
    <div
      className="ui-button-bar-group buttonBarGroup left"
    />
  </div>
</ButtonBar>
`;

exports[`Test retrieval of ButtonBar props object 1`] = `
Object {
  "backgroundColor": "inherit",
  "borderColor": "inherit",
  "borderWidth": "none",
  "buttonSize": "24px",
  "className": "",
  "color": "inherit",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "id": "",
  "justify": 0,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "visible": true,
}
`;
